[tool.poetry]
name = "medscrape"
version = "0.1.0"
description = ""
authors = ["Patrick Buzzo <pbuzzo04@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
schedule = "^0.6.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
